benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix026_power.opt_tso.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix026_power.opt_tso.opt.yml/mix026_power.opt_tso.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix026_power.opt_tso.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_c59ws4sc/tmp/tmpm2ul649w.c
Compilation started
/tmp/BenchExec_run_c59ws4sc/tmp/tmpm2ul649w.c: In function ‘P0’:
/tmp/BenchExec_run_c59ws4sc/tmp/tmpm2ul649w.c:576:19: error: ‘FALSE’ undeclared (first use in this function)
  576 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_c59ws4sc/tmp/tmpm2ul649w.c:576:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
